syntax = "proto3";
package pluginv2;

//-----------------------------------------------
// Common
//-----------------------------------------------

message PluginConfig {
  int64 id = 1;
  int64 orgId = 2;
  string name = 3;
  string type = 4;
  string url = 5;
  string jsonData = 6;
  map<string,string> decryptedSecureJsonData = 7;
}

message TimeRange {
  string fromRaw = 1;
  string toRaw = 2;
  int64 fromEpochMs = 3;
  int64 toEpochMs = 4;
}

message DataQuery {
  string refId = 1;
  int64 maxDataPoints = 2;
  int64 intervalMs = 3;
  TimeRange timeRange = 4; // NOTE: this moved from QueryRequest in v1
  string json = 5; // Arbitrary structure (model?  modelJson in v1)
}
